--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title>Regrid &ndash; data grid component for React</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis&display=swap">
-    <link rel="stylesheet" href="{{ '/assets/vendor/normalize.css' | relative_url }}">
-    <link rel="stylesheet" href="{{ '/assets/vendor/son-of-obsidian.css' | relative_url }}">
-    <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
+    <link rel="stylesheet" href="assets/vendor/normalize.css">
+    <link rel="stylesheet" href="assets/vendor/son-of-obsidian.css">
+    <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
     <div class="intro">
